--- a/menu.html
+++ b/menu.html
@@ -1,149 +1,147 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Central SMS Store</title>
-    <style>
-        body {
-            background-color: white;
-            color: black;
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
-        .container {
-            margin-top: 50px;
-        }
-        input, textarea, select, button {
-            padding: 10px;
-            margin: 10px;
-            width: 80%;
-            max-width: 400px;
-        }
-    </style>
-</head>
-<body>
-    <h1>Central SMS</h1>
-    <div class="container">
-        <p>Available Balance: R<span id="balance">0.00</span></p>
-        <h2>Products</h2>
-        <ul>
-            <li>4 SMS for R2.00</li>
-            <li>8 SMS for R2.20</li>
-        </ul>
 
-        <select id="smsOptions">
-            <option value="">Select SMS Package</option>
-            <option value="2.00|4">4 SMS for R2.00</option>
-            <option value="2.20|8">8 SMS for R2.20</option>
-        </select>
+<html lang="en">  
+<head>  
+    <meta charset="UTF-8">  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
+    <title>Central SMS Store</title>  
+    <style>  
+        body {  
+            background-color: white;  
+            color: black;  
+            font-family: Arial, sans-serif;  
+            text-align: center;  
+        }  
+        .container {  
+            margin-top: 50px;  
+        }  
+        input, textarea, select, button {  
+            padding: 10px;  
+            margin: 10px;  
+            width: 80%;  
+            max-width: 400px;  
+        }  
+    </style>  
+</head>  
+<body>  
+    <h1>Central SMS</h1>  
+    <div class="container">  
+        <p>Available Balance: R<span id="balance">0.00</span></p>  
+        <h2>Products</h2>  
+        <ul>  
+            <li>4 SMS for R2.00</li>  
+            <li>8 SMS for R2.20</li>  
+        </ul>  <select id="smsOptions">  
+        <option value="">Select SMS Package</option>  
+        <option value="2.00|4">4 SMS for R2.00</option>  
+        <option value="2.20|8">8 SMS for R2.20</option>  
+    </select>  
 
-        <button id="selectBtn">Buy Package</button>
-        <br><br>
+    <button id="selectBtn">Buy Package</button>  
+    <br><br>  
 
-        <input type="text" id="phoneNumber" placeholder="Enter phone number to send to">
-        <textarea id="message" placeholder="Type your message here..."></textarea>
-        <button id="sendBtn">Send SMS</button>
+    <input type="text" id="phoneNumber" placeholder="Enter phone number to send to">  
+    <textarea id="message" placeholder="Type your message here..."></textarea>  
+    <button id="sendBtn">Send SMS</button>  
 
-        <p>SMS Remaining: <span id="smsRemaining">0</span></p>
+    <p>SMS Remaining: <span id="smsRemaining">0</span></p>  
 
-        <select onchange="navigatePage(this.value)">
-            <option value="">More Options</option>
-            <option value="sms.html">Write SMS</option>
-            <option value="freesms.html">Free SMS</option>
-        </select>
-    </div>
+    <select onchange="navigatePage(this.value)">  
+        <option value="">More Options</option>  
+        <option value="sms.html">Write SMS</option>  
+        <option value="freesms.html">Free SMS</option>  
+    </select>  
+</div>  
 
-    <script>
-        function getQueryParameter(name) {
-            const urlParams = new URLSearchParams(window.location.search);
-            return urlParams.get(name);
-        }
+<script>  
+    function getQueryParameter(name) {  
+        const urlParams = new URLSearchParams(window.location.search);  
+        return urlParams.get(name);  
+    }  
 
-        let balance = parseFloat(localStorage.getItem('balance')) || 0;
-        let smsRemaining = parseInt(localStorage.getItem('smsRemaining')) || 0;
+    let balance = parseFloat(localStorage.getItem('balance')) || 0;  
+    let smsRemaining = parseInt(localStorage.getItem('smsRemaining')) || 0;  
 
-        const totalBalance = getQueryParameter('totalBalance');
-        if (totalBalance) {
-            balance = parseFloat(totalBalance);
-            localStorage.setItem('balance', balance);
-        }
+    const totalBalance = getQueryParameter('totalBalance');  
+    if (totalBalance) {  
+        balance = parseFloat(totalBalance);  
+        localStorage.setItem('balance', balance);  
+    }  
 
-        document.getElementById("balance").innerText = balance.toFixed(2);
-        document.getElementById("smsRemaining").innerText = smsRemaining;
+    document.getElementById("balance").innerText = balance.toFixed(2);  
+    document.getElementById("smsRemaining").innerText = smsRemaining;  
 
-        document.getElementById("selectBtn").addEventListener("click", function () {
-            const selected = document.getElementById("smsOptions").value;
-            if (!selected) {
-                alert("Please select an SMS package.");
-                return;
-            }
+    document.getElementById("selectBtn").addEventListener("click", function() {  
+        const selected = document.getElementById("smsOptions").value;  
+        if (!selected) {  
+            alert("Please select an SMS package.");  
+            return;  
+        }  
 
-            const [price, quantity] = selected.split("|");
-            const priceValue = parseFloat(price);
-            const quantityValue = parseInt(quantity);
+        const [price, quantity] = selected.split("|");  
+        const priceValue = parseFloat(price);  
+        const quantityValue = parseInt(quantity);  
 
-            if (balance < priceValue) {
-                alert("Insufficient balance to purchase this package.");
-                return;
-            }
+        if (balance < priceValue) {  
+            alert("Insufficient balance to purchase this package.");  
+            return;  
+        }  
 
-            balance -= priceValue;
-            smsRemaining += quantityValue;
-            localStorage.setItem("balance", balance);
-            localStorage.setItem("smsRemaining", smsRemaining);
+        balance -= priceValue;  
+        smsRemaining += quantityValue;  
+        localStorage.setItem("balance", balance);  
+        localStorage.setItem("smsRemaining", smsRemaining);  
 
-            document.getElementById("balance").innerText = balance.toFixed(2);
-            document.getElementById("smsRemaining").innerText = smsRemaining;
-            alert(`You purchased ${quantityValue} SMS for R${priceValue.toFixed(2)}.`);
-        });
+        document.getElementById("balance").innerText = balance.toFixed(2);  
+        document.getElementById("smsRemaining").innerText = smsRemaining;  
+        alert(`You purchased ${quantityValue} SMS for R${priceValue.toFixed(2)}.`);  
+    });  
 
-        document.getElementById("sendBtn").addEventListener("click", function () {
-            const message = document.getElementById("message").value.trim();
-            const phoneNumber = document.getElementById("phoneNumber").value.trim();
+    document.getElementById("sendBtn").addEventListener("click", function() {  
+        const message = document.getElementById("message").value.trim();  
+        const phoneNumber = document.getElementById("phoneNumber").value.trim();  
 
-            if (!phoneNumber || !message) {
-                alert("Please enter both phone number and message.");
-                return;
-            }
+        if (!phoneNumber || !message) {  
+            alert("Please enter both phone number and message.");  
+            return;  
+        }  
 
-            if (smsRemaining < 1) {
-                alert("No SMS left. Please buy a package.");
-                return;
-            }
+        if (smsRemaining < 1) {  
+            alert("No SMS left. Please buy a package.");  
+            return;  
+        }  
 
-            fetch("https://api.bulksms.com/v1/messages", {
-                method: "POST",
-                headers: {
-                    "Content-Type": "application/json",
-                    "Authorization": "Basic " + btoa("DC2F3E7522074B1F924BBF954093265C:x")
-                },
-                body: JSON.stringify({
-                    to: phoneNumber,
-                    body: message
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                if (data && data.status && data.status === '0') {
-                    smsRemaining -= 1;
-                    localStorage.setItem("smsRemaining", smsRemaining);
-                    document.getElementById("smsRemaining").innerText = smsRemaining;
-                    alert("SMS sent successfully!");
-                } else {
-                    alert("Failed to send SMS: " + (data.error || JSON.stringify(data)));
-                }
-            })
-            .catch(error => {
-                alert("Error sending SMS: " + error.message);
-            });
-        });
+        fetch("https://api.smsprovider.com/send", {  
+            method: "POST",  
+            headers: { "Content-Type": "application/json" },  
+            body: JSON.stringify({  
+                apiKey: "DC2F3E7522074B1F924BBF954093265C",  
+                to: phoneNumber,  
+                message: message  
+            })  
+        })  
+        .then(response => response.json())  
+        .then(data => {  
+            if (data.success) {  
+                smsRemaining -= 1;  
+                localStorage.setItem("smsRemaining", smsRemaining);  
+                document.getElementById("smsRemaining").innerText = smsRemaining;  
+                alert("SMS sent successfully!");  
+            } else {  
+                alert("Failed to send SMS: " + data.error);  
+            }  
+        })  
+        .catch(error => {  
+            alert("Error sending SMS: " + error.message);  
+        });  
+    });  
 
-        function navigatePage(page) {
-            if (page) {
-                window.location.href = page;
-            }
-        }
-    </script>
-</body>
-</html>
+    function navigatePage(page) {  
+        if (page) {  
+            window.location.href = page;  
+        }  
+    }  
+</script>
+
+</body>  
+    </html>
