--- a/menu.html
+++ b/menu.html
@@ -1,147 +1,156 @@
 <!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Central SMS Store</title>
+    <style>
+        body {
+            background-color: white;
+            color: black;
+            font-family: Arial, sans-serif;
+            text-align: center;
+        }
+        .container {
+            margin-top: 50px;
+        }
+        input, textarea, select, button {
+            padding: 10px;
+            margin: 10px;
+            width: 80%;
+            max-width: 400px;
+        }
+    </style>
+    <script src="https://js.yoco.com/sdk/v1/yoco-sdk-web.js"></script>
+</head>
+<body>
+    <h1>Central SMS</h1>
+    <div class="container">
+        <p>Available Balance: R<span id="balance">0.00</span></p>
+        <h2>Products</h2>
+        <ul>
+            <li>4 SMS for R2.00</li>
+            <li>8 SMS for R2.20</li>
+        </ul>
+        <select id="smsOptions">
+            <option value="">Select SMS Package</option>
+            <option value="2.00|4">4 SMS for R2.00</option>
+            <option value="2.20|8">8 SMS for R2.20</option>
+        </select>
+        <button id="payBtn">Buy Package (Pay with Yoco)</button>
+        <br><br>
 
-<html lang="en">  
-<head>  
-    <meta charset="UTF-8">  
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">  
-    <title>Central SMS Store</title>  
-    <style>  
-        body {  
-            background-color: white;  
-            color: black;  
-            font-family: Arial, sans-serif;  
-            text-align: center;  
-        }  
-        .container {  
-            margin-top: 50px;  
-        }  
-        input, textarea, select, button {  
-            padding: 10px;  
-            margin: 10px;  
-            width: 80%;  
-            max-width: 400px;  
-        }  
-    </style>  
-</head>  
-<body>  
-    <h1>Central SMS</h1>  
-    <div class="container">  
-        <p>Available Balance: R<span id="balance">0.00</span></p>  
-        <h2>Products</h2>  
-        <ul>  
-            <li>4 SMS for R2.00</li>  
-            <li>8 SMS for R2.20</li>  
-        </ul>  <select id="smsOptions">  
-        <option value="">Select SMS Package</option>  
-        <option value="2.00|4">4 SMS for R2.00</option>  
-        <option value="2.20|8">8 SMS for R2.20</option>  
-    </select>  
+        <input type="text" id="phoneNumber" placeholder="Enter phone number to send to">
+        <textarea id="message" placeholder="Type your message here..."></textarea>
+        <button id="sendBtn">Send SMS</button>
 
-    <button id="selectBtn">Buy Package</button>  
-    <br><br>  
+        <p>SMS Remaining: <span id="smsRemaining">0</span></p>
 
-    <input type="text" id="phoneNumber" placeholder="Enter phone number to send to">  
-    <textarea id="message" placeholder="Type your message here..."></textarea>  
-    <button id="sendBtn">Send SMS</button>  
+        <select onchange="navigatePage(this.value)">
+            <option value="">More Options</option>
+            <option value="sms.html">Write SMS</option>
+            <option value="freesms.html">Free SMS</option>
+        </select>
+    </div>
 
-    <p>SMS Remaining: <span id="smsRemaining">0</span></p>  
+    <script>
+        // Initialize Yoco SDK
+        const yoco = new window.YocoSDK({
+            publicKey: "pk_live_88415492P4RYmO49b224" // Replace with your actual public key
+        });
 
-    <select onchange="navigatePage(this.value)">  
-        <option value="">More Options</option>  
-        <option value="sms.html">Write SMS</option>  
-        <option value="freesms.html">Free SMS</option>  
-    </select>  
-</div>  
+        // Initialize balance and SMS remaining
+        let balance = parseFloat(localStorage.getItem('balance')) || 0;
+        let smsRemaining = parseInt(localStorage.getItem('smsRemaining')) || 0;
 
-<script>  
-    function getQueryParameter(name) {  
-        const urlParams = new URLSearchParams(window.location.search);  
-        return urlParams.get(name);  
-    }  
+        document.getElementById("balance").innerText = balance.toFixed(2);
+        document.getElementById("smsRemaining").innerText = smsRemaining;
 
-    let balance = parseFloat(localStorage.getItem('balance')) || 0;  
-    let smsRemaining = parseInt(localStorage.getItem('smsRemaining')) || 0;  
+        let currentPrice = 0;
+        let currentQty = 0;
 
-    const totalBalance = getQueryParameter('totalBalance');  
-    if (totalBalance) {  
-        balance = parseFloat(totalBalance);  
-        localStorage.setItem('balance', balance);  
-    }  
+        // Checkout configuration
+        const checkout = yoco.inlineCheckout({
+            currency: "ZAR",
+            name: "Central SMS",
+            description: "SMS Package",
+            callback: function(result) {
+                if (result.error) {
+                    alert("Payment failed: " + result.error.message);
+                } else {
+                    balance -= parseFloat(currentPrice);
+                    smsRemaining += parseInt(currentQty);
 
-    document.getElementById("balance").innerText = balance.toFixed(2);  
-    document.getElementById("smsRemaining").innerText = smsRemaining;  
+                    localStorage.setItem("balance", balance);
+                    localStorage.setItem("smsRemaining", smsRemaining);
 
-    document.getElementById("selectBtn").addEventListener("click", function() {  
-        const selected = document.getElementById("smsOptions").value;  
-        if (!selected) {  
-            alert("Please select an SMS package.");  
-            return;  
-        }  
+                    document.getElementById("balance").innerText = balance.toFixed(2);
+                    document.getElementById("smsRemaining").innerText = smsRemaining;
 
-        const [price, quantity] = selected.split("|");  
-        const priceValue = parseFloat(price);  
-        const quantityValue = parseInt(quantity);  
+                    alert(`Payment successful! You purchased ${currentQty} SMS.`);
+                }
+            }
+        });
 
-        if (balance < priceValue) {  
-            alert("Insufficient balance to purchase this package.");  
-            return;  
-        }  
+        // Button to initiate payment
+        document.getElementById("payBtn").addEventListener("click", () => {
+            const selected = document.getElementById("smsOptions").value;
+            if (!selected) {
+                alert("Please select an SMS package.");
+                return;
+            }
 
-        balance -= priceValue;  
-        smsRemaining += quantityValue;  
-        localStorage.setItem("balance", balance);  
-        localStorage.setItem("smsRemaining", smsRemaining);  
+            const [price, quantity] = selected.split("|");
+            currentPrice = price;
+            currentQty = quantity;
 
-        document.getElementById("balance").innerText = balance.toFixed(2);  
-        document.getElementById("smsRemaining").innerText = smsRemaining;  
-        alert(`You purchased ${quantityValue} SMS for R${priceValue.toFixed(2)}.`);  
-    });  
+            const priceInCents = Math.round(parseFloat(price) * 100);
+            checkout.open({ amountInCents: priceInCents });
+        });
 
-    document.getElementById("sendBtn").addEventListener("click", function() {  
-        const message = document.getElementById("message").value.trim();  
-        const phoneNumber = document.getElementById("phoneNumber").value.trim();  
+        // SMS sending functionality
+        document.getElementById("sendBtn").addEventListener("click", function() {
+            if (smsRemaining <= 0) {
+                alert("You have no SMS remaining. Please buy more SMS.");
+                return;
+            }
 
-        if (!phoneNumber || !message) {  
-            alert("Please enter both phone number and message.");  
-            return;  
-        }  
+            let message = document.getElementById("message").value.trim();
+            if (!message) {
+                alert("Please enter a message before sending.");
+                return;
+            }
 
-        if (smsRemaining < 1) {  
-            alert("No SMS left. Please buy a package.");  
-            return;  
-        }  
+            fetch("https://api.smsprovider.com/send", {
+                method: "POST",
+                headers: { "Content-Type": "application/json" },
+                body: JSON.stringify({
+                    apiKey: "DC2F3E7522074B1F924BBF954093265C",
+                    phoneNumber: document.getElementById("phoneNumber").value,
+                    message: message
+                })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    smsRemaining--;
+                    localStorage.setItem("smsRemaining", smsRemaining);
+                    document.getElementById("smsRemaining").innerText = smsRemaining;
+                    alert("SMS sent successfully!");
+                } else {
+                    alert("Failed to send SMS: " + data.error);
+                }
+            })
+            .catch(error => {
+                alert("Error sending SMS: " + error.message);
+            });
+        });
 
-        fetch("https://api.smsprovider.com/send", {  
-            method: "POST",  
-            headers: { "Content-Type": "application/json" },  
-            body: JSON.stringify({  
-                apiKey: "DC2F3E7522074B1F924BBF954093265C",  
-                to: phoneNumber,  
-                message: message  
-            })  
-        })  
-        .then(response => response.json())  
-        .then(data => {  
-            if (data.success) {  
-                smsRemaining -= 1;  
-                localStorage.setItem("smsRemaining", smsRemaining);  
-                document.getElementById("smsRemaining").innerText = smsRemaining;  
-                alert("SMS sent successfully!");  
-            } else {  
-                alert("Failed to send SMS: " + data.error);  
-            }  
-        })  
-        .catch(error => {  
-            alert("Error sending SMS: " + error.message);  
-        });  
-    });  
-
-    function navigatePage(page) {  
-        if (page) {  
-            window.location.href = page;  
-        }  
-    }  
-</script>
-
-</body>  
-    </html>
+        function navigatePage(page) {
+            if (page) {
+                window.location.href = page;
+            }
+        }
+    </script>
+</body>
+</html>
