--- a/menu.html
+++ b/menu.html
@@ -49,7 +49,7 @@
         <select onchange="navigatePage(this.value)">
             <option value="">More Options</option>
             <option value="sms.html">Write SMS</option>
-            <option value="freesms.html">Free SMS</option>
+            <option value="central.html">Free SMS</option>
         </select>
     </div>
 
