--- a/menu.html
+++ b/menu.html
@@ -49,7 +49,7 @@
         <select onchange="navigatePage(this.value)">
             <option value="">More Options</option>
             <option value="sms.html">Write SMS</option>
-            <option value="central.html">Free SMS</option>
+            <option value="freesms.html">Free SMS</option>
         </select>
     </div>
 
@@ -78,6 +78,7 @@
                 if (result.error) {
                     alert("Payment failed: " + result.error.message);
                 } else {
+                    // On successful payment
                     balance -= parseFloat(currentPrice);
                     smsRemaining += parseInt(currentQty);
 
@@ -105,6 +106,7 @@
             currentQty = quantity;
 
             const priceInCents = Math.round(parseFloat(price) * 100);
+            console.log(`Opening Yoco checkout for ${priceInCents} cents.`);
             checkout.open({ amountInCents: priceInCents });
         });
 
