--- a/menu.html
+++ b/menu.html
@@ -30,7 +30,7 @@
         <h2>Products</h2>
         <ul>
             <li>4 SMS for R2.00</li>
-            <li>8 SMS for R2.20</li>
+            <li>8 SMS for R4.20</li>
         </ul>
         <select id="smsOptions">
             <option value="">Select SMS Package</option>
@@ -49,7 +49,7 @@
         <select onchange="navigatePage(this.value)">
             <option value="">More Options</option>
             <option value="sms.html">Write SMS</option>
-            <option value="freesms.html">Free SMS</option>
+            <option value="central.html">Free SMS</option>
         </select>
     </div>
 
